[package]
name = "seppuku_hyphen"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
strip = true
panic = "abort"

[dependencies]
dotenv = "0.15"

tokio = { version = "1.37", features = ["full"] }
fantoccini = "0.20.0-rc.7"
dashmap = "5.5"
anyhow = "1.0"
chrono = "0.4"
serde = "1.0"
regex = "1.10"

reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

